--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,67 @@
 body {
-  margin: 0;
+  
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin-top: 35px;
 }
+h1,h2,h3{
+  text-align: center;
+  }
+  p{
+    text-align: center;
+  }
+  
+  .list {
+  width: 40%;
+  min-width: 200px;
+    margin: auto;
+  }
+#name{
+  font-size: 25px;  
+}
+.header{
+  background-color: orange;
+  color: white;
+  padding: 2px;
+  max-width: 55%;
+  min-width: 35%;
+  margin: auto;
+}
+.bodyy{
+  background-color: teal;
+  color: white;
+  max-width: 55%;
+  min-width: 35%;
+  margin: auto;
+  padding: 2px;
 
+}
+.footer{
+  background-color: orange;
+  color: white;
+  padding: 3px;
+  max-width: 55%;
+  min-width: 35%;
+  margin: auto;
+}
+img{
+  width: 50%;
+  height: 50%;
+  margin-left: 25%;
+}
+span{
+  background-color: orangered;
+  color: white;
+  padding: 2px;
+  
+}
+#gate{
+  letter-spacing: 15px;
+  font-size: 20px;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
